# feature_omni

./: CMakeLists.txt  CamModelGeneral.cpp  CamModelGeneral.h  Campare.cpp  Compare.h  Frame.cpp  Frame.h  ORBextractor.cpp  ORBextractor.h  main_cube.cpp  main_lafida.cpp  simualtion_.cpp  system.cpp  system.h
Examples/: main_cube.cpp  main_lafida.cpp  main_simulation.cpp
include/: CamModelGeneral.h  Compare.h  Frame.h  ORBextractor.h  system.h
result/: omni_BF.txt  omni_knn.txt
src/: CamModelGeneral.cpp  Campare.cpp  Frame.cpp  ORBextractor.cpp  system.cpp
